--- a/Bicubic.vcxproj
+++ b/Bicubic.vcxproj
@@ -184,6 +184,7 @@
     <ClCompile Include="src\ofApp.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\bicubic.hpp" />
     <ClInclude Include="src\ofApp.h" />
   </ItemGroup>
   <ItemGroup>
